# AdaptiveRegulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  ar.c  ar.h  ar_debugfs.c  ar_debugfs.h  ar_makefile  ar_perfs.c  ar_perfs.h  eml_common.h  eml_net.h  eml_net_common.h  eml_trees.h  kernel_headers.h  master.c  master.h  model.c  model.h  random_forest_model.c  random_forest_model.h  test.c  test_makefile  time_series_model.h  utils.c  utils.h
cmake/: FindKernelHeaders.cmake
scripts/: consolidate_results.py  cosch_2core_ipc_benchmark_without_regulation.sh  cosch_2core_ipc_regulation_enabled.sh  isol_ipc_benchmark.sh  merge_consolidated_results.py  reset_env.sh  setup_2_core_env.sh  setup_4_core_env.sh  show_results.py  show_results.sh  show_results_refactored.sh  workload_characteristics.csv
